test/corpus/regressions.txt
================================================================================
hyphenated component names (Rodin file names)
================================================================================

CONTEXT ENV_C-1
END

MACHINE F-ALGOPC
REFINES
    E-ALGO
SEES
    A-C0 ENV_C-1
END

--------------------------------------------------------------------------------

(source_file
  (context
    name: (component_name
      (identifier)))
  (machine
    name: (component_name
      (identifier))
    (refines_clause
      target: (component_name
        (identifier)))
    (sees_clause
      (component_name
        (identifier))
      (component_name
        (identifier)))))

================================================================================
Union and Inter as plain identifiers; union(S) as application
================================================================================

context C
  axioms
    @a Root ∈ Union
    @b finite(Union)
    @c x = union(S)
    @d INTERVAL ⊆ Inter
end

--------------------------------------------------------------------------------

(source_file
  (context
    name: (identifier)
    (axioms_clause
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (identifier)))
      (axiom
        label: (label)
        predicate: (function_application
          function: (builtin)
          argument: (identifier)))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (function_application
            function: (identifier)
            argument: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (identifier))))))

================================================================================
set extension applied as a function (Rodin-emitted)
================================================================================

machine M
  events
    event e
      then
        @act1 lamp ≔ {TRUE ↦ on, FALSE ↦ off}(bool(x ∈ S))
        @act2 d ≔ {UP ↦ 1, DOWN ↦ −(1)}(dir(l))
    end
end

--------------------------------------------------------------------------------

(source_file
  (machine
    name: (identifier)
    (events_clause
      (event
        name: (identifier)
        (then_clause
          (action
            label: (label)
            (assignment
              left: (identifier)
              right: (function_application
                function: (set_enumeration
                  (binary_expression
                    left: (bool_true)
                    right: (identifier))
                  (binary_expression
                    left: (bool_false)
                    right: (identifier)))
                argument: (bool_conversion
                  predicate: (comparison_predicate
                    left: (identifier)
                    right: (identifier))))))
          (action
            label: (label)
            (assignment
              left: (identifier)
              right: (function_application
                function: (set_enumeration
                  (binary_expression
                    left: (identifier)
                    right: (number))
                  (binary_expression
                    left: (identifier)
                    right: (unary_expression
                      operand: (parenthesized_expression
                        (number)))))
                argument: (function_application
                  function: (identifier)
                  argument: (identifier))))))))))

================================================================================
quantified union over expressions (from aman_v7)
================================================================================

context C
  axioms
    @a S = ⋃t · t ∈ T | f[{t}]
    @b R = UNION p · p ∈ Q | g(p)
end

--------------------------------------------------------------------------------

(source_file
  (context
    name: (identifier)
    (axioms_clause
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (quantified_union
            binder: (typed_identifier
              name: (identifier))
            condition: (comparison_predicate
              left: (identifier)
              right: (identifier))
            body: (relational_image
              relation: (identifier)
              image: (set_enumeration
                (identifier))))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (quantified_union
            binder: (typed_identifier
              name: (identifier))
            condition: (comparison_predicate
              left: (identifier)
              right: (identifier))
            body: (function_application
              function: (identifier)
              argument: (identifier))))))))

================================================================================
empty enumeration with inner whitespace
================================================================================

context C
  axioms
    @a S = { }
end

--------------------------------------------------------------------------------

(source_file
  (context
    name: (identifier)
    (axioms_clause
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (set_enumeration))))))

================================================================================
maplet binds looser than relation arrows and oftype (kernel_lang ladder)
================================================================================

context C
  axioms
    @a t = a ↦ b ↔ c
    @b u = a ↦ b ⦂ T
end

--------------------------------------------------------------------------------

(source_file
  (context
    (identifier)
    (axioms_clause
      (axiom
        (label)
        (comparison_predicate
          (identifier)
          (binary_expression
            (identifier)
            (binary_expression
              (identifier)
              (identifier)))))
      (axiom
        (label)
        (comparison_predicate
          (identifier)
          (binary_expression
            (identifier)
            (binary_expression
              (identifier)
              (identifier))))))))

================================================================================
hyphenated event names and refinement targets (Rodin-emitted)
================================================================================

machine M
  events
    event computing-computing refines prepost-computing
      then
        @a x ≔ 1
    end
end

--------------------------------------------------------------------------------

(source_file
  (machine
    (identifier)
    (events_clause
      (event
        (component_name
          (identifier))
        (component_name
          (identifier))
        (then_clause
          (action
            (label)
            (assignment
              (identifier)
              (number))))))))

================================================================================
event refines may follow the status clause (grammar.pest event_body)
================================================================================

machine M
  events
    event e status convergent refines f
      then
        @a x ≔ 1
    end
end

--------------------------------------------------------------------------------

(source_file
  (machine
    (identifier)
    (events_clause
      (event
        (identifier)
        (status_clause)
        (identifier)
        (then_clause
          (action
            (label)
            (assignment
              (identifier)
              (number))))))))

================================================================================
postfix application heads: literals, bool conversion
================================================================================

context C
  axioms
    @a x = bool(y > 0)(1)
    @c w = 5(1)
end

--------------------------------------------------------------------------------

(source_file
  (context
    (identifier)
    (axioms_clause
      (axiom
        (label)
        (comparison_predicate
          (identifier)
          (function_application
            (bool_conversion
              (comparison_predicate
                (identifier)
                (number)))
            (number))))
      (axiom
        (label)
        (comparison_predicate
          (identifier)
          (function_application
            (number)
            (number)))))))

================================================================================
operator words as identifiers: dom, ran, pow, not, if, theorem
================================================================================

machine M
  variables dom ran pow
  invariants
    @i1 dom ∈ ℕ
    @i2 theorem ∈ ℕ
  events
    event e any if where
      @g if > 0
    then
      @a dom ≔ ran(f)
      @b not ≔ pow + 1
    end
end

--------------------------------------------------------------------------------

(source_file
  (machine
    (identifier)
    (variables_clause
      (identifier)
      (identifier)
      (identifier))
    (invariants_clause
      (invariant
        (label)
        (comparison_predicate
          (identifier)
          (natural_set)))
      (invariant
        (label)
        (comparison_predicate
          (identifier)
          (natural_set))))
    (events_clause
      (event
        (identifier)
        (any_clause
          (identifier))
        (where_clause
          (guard
            (label)
            (comparison_predicate
              (identifier)
              (number))))
        (then_clause
          (action
            (label)
            (assignment
              (identifier)
              (closed_unary_expression
                (identifier))))
          (action
            (label)
            (assignment
              (identifier)
              (binary_expression
                (identifier)
                (number)))))))))

================================================================================
operator input aliases: ,, maplet and +->>/-->> surjections
================================================================================

context C
  axioms
    @a p = a ,, b
    @b f ∈ A +->> B
    @c g ∈ A -->> B
    @d h = λx ,, y · x = x | x
end

--------------------------------------------------------------------------------

(source_file
  (context
    (identifier)
    (axioms_clause
      (axiom
        (label)
        (comparison_predicate
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (axiom
        (label)
        (comparison_predicate
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (axiom
        (label)
        (comparison_predicate
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (axiom
        (label)
        (comparison_predicate
          (identifier)
          (lambda_expression
            (maplet_pattern
              (typed_identifier
                (identifier))
              (typed_identifier
                (identifier)))
            (comparison_predicate
              (identifier)
              (identifier))
            (identifier)))))))
